# Wire

./: .coverage  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.md  Makefile  NOTES.md  README.md  conftest.py  docker-compose.yml  install_chromedriver.sh  install_gecko.sh  pyproject.toml  travis.yml
docs/: Wire.ipynb
examples/: Mysite.py
tests/: test_browsers.py  test_elements.py  test_pages.py  test_website.py
wire/: __init__.py  browser.py  element.py  elements.py  exceptions.py  page.py
wire/core/: __init__.py  browser.py  element.py
wire/helpers/: __init__.py  getelement.py  identifiers.py  logging.py  timer.py  undocumented.py  url.py
wire/utilities/: colors.py  constants.py  decorators.py  helpers.py  utilities.py
