[tool.poetry]
name = "wirelib"
version = "0.1.0"
description = "Wrapping Selenium with class"
authors = ["misterbianco <jayrad.security@protonmail.com>"]
license = "MIT"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.7.1"

# Testing libraries
selenium = "3.141.^"
requests = "2.21.^"
beautifulsoup4 = "4.7.^"

Pygments= "2.3.^"
colorama = "0.4.1"
loguru = "0.2.^"
typeguard="2.3.^"

# load configs
python-dotenv = "0.10.1"

pytest = "4.4.0"
pytest-cov = "2.6.1"
pytest-sugar = "0.9.2"
pytest-xdist = "1.27.^"

codecov = "2.0.15"

[tool.poetry.dev-dependencies]

black = { version = "*", allows-prereleases = true }

jupyter = "1.0.^"
jupyterlab = "0.35.^"

# Travis libs
pre-commit = "1.15.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
